--- a/adamou3.css
+++ b/adamou3.css
@@ -34,7 +34,7 @@ body {
 #enter img:hover {transform: scale(1.5);}
 
 
-@font-face {font-family: title;src: url(font/roboto/Roboto-Thin.ttf);}
+@font-face {font-family: title;src: url(font/roboto/Roboto-Light.ttf);}
 
 @font-face {font-family: title-bold;src: url(font/roboto/Roboto-Bold.ttf);}
 
