--- a/adamou3.css
+++ b/adamou3.css
@@ -15,10 +15,10 @@ body {
     vertical-align: middle;
 }
 .padding {height: 5%;}
-.content { margin: auto; max-width: 75%;}
+.content { margin: auto; max-width: 75%;  margin-top: 10%;  }
 
-.top {text-align: center; vertical-align: middle; width: 100%; margin-bottom: 8%; margin-top:9%; }
-.index {text-align: center; vertical-align: middle; width: 100%; margin-bottom: 8%; margin-top:9%; }
+.top {text-align: center; vertical-align: middle; width: 100%; margin-bottom: 4%; }
+.index {text-align: center; vertical-align: middle; width: 100%; margin-bottom: 4%; }
 
 .left {   width: 10%;  float:left;  margin-top: 10%; margin-left: 5%;}
 .left a:focus{ text-decoration:underline ; color: #33cc33;}
@@ -68,6 +68,7 @@ p.italic {font-family: title;font-size: 0.9vw;text-align: justify;font-style: it
 .yellow2 {text-align: center; }
 /* The dots/bullets/indicators */
 .dot {
+   
   cursor:pointer;
   height: 0.5vw;
   width: 4%;
@@ -91,8 +92,10 @@ iframe {
     
 }
 
-
-
+@media screen and (max-width: 1680px) { .content { transform: scale(1.1);}}
+@media screen and (max-width: 1536px) { .content { transform: scale(1.2);}}
+@media screen and (max-width: 1366px) { .content { transform: scale(1.3);}}
+@media screen and (max-width: 960px)  { .content { transform: scale(1.4);}}
 
 
 
