--- a/adamou3.css
+++ b/adamou3.css
@@ -63,7 +63,7 @@ p.italic {font-family: title;font-size: 0.9vw;text-align: justify;font-style: it
 
 .left a:hover{color: #33cc33;}
 .yellow:hover{background-color: yellow;}
-
+.yellow {border: 1px black solid;}
 .yellow2 a:hover{color: black; }
 .yellow2 {text-align: center; }
 /* The dots/bullets/indicators */
@@ -95,7 +95,55 @@ iframe {
 @media screen and (max-width: 1680px) { .content { transform: scale(1.1);}}
 @media screen and (max-width: 1536px) { .content { transform: scale(1.2);}}
 @media screen and (max-width: 1366px) { .content { transform: scale(1.3);}}
-@media screen and (max-width: 960px)  { .content { transform: scale(1.4);}}
+@media screen and (max-width: 960px)  { .content { transform: scale(1.5);} #enter img:hover {transform: scale(1);}.content { max-width: 100%;  margin-top: 0%;  }.right {width: 0%;  float:right; }
+.slideshow-container{height: 50vw;  }
+
+
+
+.center {text-align: center; width: 60%;   height: 100vw;}.left { margin: auto; text-align: center; vertical-align: middle; width: 100%; margin-bottom: 4%;}.left a {text-decoration: none;font-size: 1.9vw;padding: 
+    0.5%;font-family: title;color:#818181;display:inline-flex}#enter img {border: 1px black solid; width: 28%;}
+
+p.title {font-family: title;font-size: 4.5vw; color: black;} 
+
+p { margin:3; }
+
+
+
+p.show {font-family: title;font-size: 1.vw; color: black;}    
+
+p.detail {font-family: title;font-size: 1.8vw;text-align: justify; color: black;}
+
+p.bold {font-family: title-bold;font-size: 1.8vw;text-align: justify; color: black;} 
+
+p.italic {font-family: title;font-size: 1.8vw;text-align: justify;font-style: italic; color: black;}
+
+.yellow2 {display:inline-flex ; padding: 
+    0.5%;}
+    
+    
+    
+    .yellow {border: 0px}
+    .yellow:hover{background-color: transparent; }
+    .yellow2 a:hover{color: #33cc33 }
+    
+    
+.linka a {border: black 1px solid; text-decoration: none;font-size: 1.8vw;padding: 1%;font-family: title;color:black;float: right;}
+.linka1 a {border: black 1px solid; text-decoration: none;font-size: 1.8vw;padding: 1%;font-family: title;color:black;}
+.linka2 a { text-decoration: none;font-size: 1.8vw;padding: 1%;font-family: title;color:black;}
+.linka a:hover{color: #33cc33;}
+.linka1 a:hover{color: #33cc33;}
+.linka2 a:hover{color: #33cc33;}
+
+.dot {
+   
+  cursor:pointer;
+  height: 2vw;
+  width: %;
+  
+}
+
+
+}
 
 
 
