--- a/adamou3.css
+++ b/adamou3.css
@@ -95,12 +95,12 @@ iframe {
 @media screen and (max-width: 1680px) { .content { transform: scale(1.1);}}
 @media screen and (max-width: 1536px) { .content { transform: scale(1.2);}}
 @media screen and (max-width: 1366px) { .content { transform: scale(1.3);}}
-@media screen and (max-width: 960px)  { .content { transform: scale(1.5);} #enter img:hover {transform: scale(1);}.content { max-width: 100%;  margin-top: 0%;  }.right {width: 0%;  float:right; }
-.slideshow-container{height: 50vw;  }
+@media screen and (max-width: 960px)  { .content { transform: scale(1.3);} #enter img:hover {transform: scale(1);}.content { max-width: 100%;    }.right {width: 0%;  float:right; }
 
 
 
-.center {text-align: center; width: 60%;   height: 100vw;}.left { margin: auto; text-align: center; vertical-align: middle; width: 100%; margin-bottom: 4%;}.left a {text-decoration: none;font-size: 1.9vw;padding: 
+
+.center {text-align: center; width: 70%;   height: 90vw;}.left { margin: auto; margin-bottom: 2%; text-align: center; vertical-align: middle; width: 100%;}.left a {text-decoration: none;font-size: 1.9vw;padding: 
     0.5%;font-family: title;color:#818181;display:inline-flex}#enter img {border: 1px black solid; width: 28%;}
 
 p.title {font-family: title;font-size: 4.5vw; color: black;} 
@@ -139,6 +139,12 @@ p.italic {font-family: title;font-size: 1.8vw;text-align: justify;font-style: it
   cursor:pointer;
   height: 2vw;
   width: %;
+  
+}
+    
+    .save {
+   
+  height: 20%;
   
 }
 
