--- a/adamou3.css
+++ b/adamou3.css
@@ -87,7 +87,8 @@ p.italic {font-family: title;font-size: 0.9vw;text-align: justify;font-style: it
 iframe {
     
   
-
+    width: 100%;
+    height: 75%;
     border: 0px ;
     
 }
@@ -95,27 +96,27 @@ iframe {
 @media screen and (max-width: 1680px) { .content { transform: scale(1.1);}}
 @media screen and (max-width: 1536px) { .content { transform: scale(1.2);}}
 @media screen and (max-width: 1366px) { .content { transform: scale(1.3);}}
-@media screen and (max-width: 960px)  { .content { transform: scale(1.3);} #enter img:hover {transform: scale(1);}.content { max-width: 100%;    }.right {width: 0%;  float:right; }
+@media screen and (max-width: 640px)  { .content { transform: scale(1);} #enter img:hover {transform: scale(1);}.content { max-width: 100%;    }.right {width: 0%;  float:right; }
 
 
 
 
-.center {text-align: center; width: 70%;   height: 90vw;}.left { margin: auto; margin-bottom: 2%; text-align: center; vertical-align: middle; width: 100%;}.left a {text-decoration: none;font-size: 1.9vw;padding: 
-    0.5%;font-family: title;color:#818181;display:inline-flex}#enter img {border: 1px black solid; width: 28%;}
+.center {position:sticky;  text-align: center; width: 99%;   height: 140vw;}.left { margin: auto; margin-bottom: 2%; text-align: center;  width: 100%; }.left a {text-decoration: none;font-size: 3.5vw;padding: 
+    0.5%;font-family: title;color:#818181;display:inline-flex}#enter img {border: 1px black solid; width: 48%;}
 
-p.title {font-family: title;font-size: 4.5vw; color: black;} 
+p.title {font-family: title;font-size: 6vw; color: black;} 
 
 p { margin:3; }
 
 
 
-p.show {font-family: title;font-size: 1.vw; color: black;}    
+p.show {font-family: title;font-size: 3vw; color: black;}    
 
-p.detail {font-family: title;font-size: 1.8vw;text-align: justify; color: black;}
+p.detail {font-family: title;font-size: 3vw;text-align: justify; color: black;}
 
-p.bold {font-family: title-bold;font-size: 1.8vw;text-align: justify; color: black;} 
+p.bold {font-family: title-bold;font-size: 3vw;text-align: justify; color: black;} 
 
-p.italic {font-family: title;font-size: 1.8vw;text-align: justify;font-style: italic; color: black;}
+p.italic {font-family: title;font-size: 3vw;text-align: justify;font-style: italic; color: black;}
 
 .yellow2 {display:inline-flex ; padding: 
     0.5%;}
@@ -127,9 +128,9 @@ p.italic {font-family: title;font-size: 1.8vw;text-align: justify;font-style: it
     .yellow2 a:hover{color: #33cc33 }
     
     
-.linka a {border: black 1px solid; text-decoration: none;font-size: 1.8vw;padding: 1%;font-family: title;color:black;float: right;}
-.linka1 a {border: black 1px solid; text-decoration: none;font-size: 1.8vw;padding: 1%;font-family: title;color:black;}
-.linka2 a { text-decoration: none;font-size: 1.8vw;padding: 1%;font-family: title;color:black;}
+.linka a {border: black 1px solid; text-decoration: none;font-size: 3vw;padding: 1%;font-family: title;color:black;float: right;}
+.linka1 a {border: black 1px solid; text-decoration: none;font-size: 3vw;padding: 1%;font-family: title;color:black;}
+.linka2 a { text-decoration: none;font-size: 3vw;padding: 1%;font-family: title;color:black;}
 .linka a:hover{color: #33cc33;}
 .linka1 a:hover{color: #33cc33;}
 .linka2 a:hover{color: #33cc33;}
@@ -137,17 +138,24 @@ p.italic {font-family: title;font-size: 1.8vw;text-align: justify;font-style: it
 .dot {
    
   cursor:pointer;
-  height: 2vw;
-  width: %;
+  height: 5vw;
+  width: 5vw;
   
 }
     
     .save {
    
-  height: 20%;
+  height: 40%;
   
 }
-
+iframe {
+    
+  
+    width: 100%;
+    height: 60%;
+    
+    
+}
 
 }
 
