--- a/adamou3.css
+++ b/adamou3.css
@@ -101,7 +101,7 @@ iframe {
 
 
 
-.center {position:sticky;  text-align: center; width: 99%;   height: 140vw;}.left { margin: auto; margin-bottom: 2%; text-align: center;  width: 100%; }.left a {text-decoration: none;font-size: 3.5vw;padding: 
+.center {text-align: center; width: 99%;   height: 140vw;}.left { margin: auto; margin-bottom: 2%; text-align: center; vertical-align: middle; width: 100%; }.left a {text-decoration: none;font-size: 3.5vw;padding: 
     0.5%;font-family: title;color:#818181;display:inline-flex}#enter img {border: 1px black solid; width: 48%;}
 
 p.title {font-family: title;font-size: 6vw; color: black;} 
