--- a/adamou3.css
+++ b/adamou3.css
@@ -140,6 +140,7 @@ p.italic {font-family: title;font-size: 3vw;text-align: justify;font-style: ital
   cursor:pointer;
   height: 5vw;
   width: 5vw;
+    margin-bottom: 5%;
   
 }
     
