--- a/adamou3.css
+++ b/adamou3.css
@@ -96,12 +96,12 @@ iframe {
 @media screen and (max-width: 1680px) { .content { transform: scale(1.1);}}
 @media screen and (max-width: 1536px) { .content { transform: scale(1.2);}}
 @media screen and (max-width: 1366px) { .content { transform: scale(1.3);}}
-@media screen and (max-width: 640px)  { .content { transform: scale(1);} #enter img:hover {transform: scale(1);}.content { max-width: 100%;    }.right {width: 0%;  float:right; }
+@media screen and (max-width: 640px)  { .content { transform: scale(1);} #enter img:hover {transform: scale(1);}.content { max-width: 100%;    height: 120vw}.right {width: 0%;  float:right; }
 
 
 
 
-.center {text-align: center; width: 99%;   height: 135vw;}.left { margin: auto; margin-bottom: 2%; text-align: center; vertical-align: middle; width: 100%; }.left a {text-decoration: none;font-size: 3.3vw; padding: 
+.center {text-align: center; width: 99%;   height: 120vw;}.left { margin: auto; margin-bottom: 2%; text-align: center; vertical-align: middle; width: 100%; }.left a {text-decoration: none;font-size: 3.3vw; padding: 
     0.5%;font-family: title;color:#818181;display:inline-flex}#enter img {border: 1px black solid; width: 48%;}
 
 p.title {font-family: title;font-size: 6vw; color: black;} 
@@ -123,9 +123,9 @@ p.italic {font-family: title;font-size: 3vw;text-align: justify;font-style: ital
     
     
     
-    .yellow {border: 0px}
-    .yellow:hover{background-color: transparent; }
-    .yellow2 a:hover{color: #33cc33 }
+    .yellow {margin-right: 6px}
+    
+    
     
     
 .linka a {border: black 1px solid; text-decoration: none;font-size: 3vw;padding: 1%;font-family: title;color:black;float: right;}
@@ -138,22 +138,22 @@ p.italic {font-family: title;font-size: 3vw;text-align: justify;font-style: ital
 .dot {
    
   cursor:pointer;
-  height: 5vw;
-  width: 5vw;
+  height: 4vw;
+  width: 4vw;
     margin-bottom: 5%;
   
 }
     
     .save {
    
-  height: 30%;
+  height: 20%;
   
 }
 iframe {
     
   
     width: 100%;
-    height: 50%;
+    height: 70%;
     
     
 }
